--- a/main.tex
+++ b/main.tex
@@ -450,10 +450,17 @@ Este documento constituye una guía (que sirve a su vez de plantilla) para la el
 \newpage
 \pagenumbering{arabic}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+%%%%%%%%%%%%%% - CONTENIDO TFM- %%%%%%%%%%%%%%
+
+\input{lib/chapter1.tex}
+
+\input{lib/chapter2.tex}
+
+\input{lib/chapter3.tex}
 
 
-%%%%%%%%%%%%%%%%%%% - TÍTULOS - %%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%% - TITULOS - %%%%%%%%%%%%%%%%%%
 
 \section{TÍTULOS} \label{sec:titulos}
 
@@ -499,15 +506,6 @@ Para citar una referencia basta con utilizar el comando \texttt{\textbackslash r
 \textbf{Nota:} ya que el comando \texttt{\textbackslash label} es compartido por títulos, figuras, tablas, etc., es bastante útil utilizar una nomenclatura clara para definir cada referencia, por ejemplo: ``tab:" \ seguido del nombre de la tabla para las tablas, ``fig:" \ seguido del nombre de la figura para las figuras, etc.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%%%%%%%%%%%%%% - CONTENIDO TFM- %%%%%%%%%%%%%%
-
-\input{lib/chapter1.tex}
-
-\input{lib/chapter2.tex}
-
-\input{lib/chapter3.tex}
-
 
 
 %%%%%%%%%%%%%% - FORMATO DE TEXTO - %%%%%%%%%%%%%%
