--- a/lib/chapter1.tex
+++ b/lib/chapter1.tex
@@ -1,5 +1,5 @@
 \section{INTRODUCTION} \label{sec:itroduction}
 
-\subsection{Profundidad 2}
+\subsection{Motivation for the research}
 
-\subsection{Profundidad 3}
+\subsection{Outline of the thesis}
