--- a/lib/chapter1.tex
+++ b/lib/chapter1.tex
@@ -1,5 +1,8 @@
 \section{INTRODUCTION} \label{sec:itroduction}
 
+\subsection{Background and literature review}
 \subsection{Motivation for the research}
 
 \subsection{Outline of the thesis}
+
+
