--- a/main.tex
+++ b/main.tex
@@ -453,11 +453,16 @@ Este documento constituye una guía (que sirve a su vez de plantilla) para la el
 %%%%%%%%%%%%%% - CONTENIDO TFM- %%%%%%%%%%%%%%
 
 \input{lib/chapter1.tex}
+\newpage
 
 \input{lib/chapter2.tex}
+\newpage
 
 \input{lib/chapter3.tex}
+\newpage
 
+\input{lib/chapter4.tex}
+\newpage
 
 %%%%%%%%%%%%%%%%%% - TITULOS - %%%%%%%%%%%%%%%%%%
 
@@ -510,7 +515,7 @@ Para citar una referencia basta con utilizar el comando \texttt{\textbackslash r
 %%%%%%%%%%%%%% - FORMATO DE TEXTO - %%%%%%%%%%%%%%
 
 \newpage
-\section{FORMATO DE TEXTO} \label{sec:formato}
+\section{FORMATO DE TEXTO}\label{sec:formato}
 
 Como en cualquier editor de texto, el formato del texto puede alterarse sobre la marcha de distintas maneras. Pueden incluirse palabras en \textbf{negrita} (si se utiliza Overleaf puede utilizarse el atajo \texttt{ctrl+B} en Windows o \texttt{Cmd+B} en Mac), palabras en \textit{curiva} (\texttt{ctrl+I} o \texttt{Cmd+I}), o una \textit{\textbf{combinación}} de ambas.
 
