Is working with no license?

--- a/lib/chapter1.tex
+++ b/lib/chapter1.tex
@@ -1,7 +1,15 @@
 \section{INTRODUCTION} \label{sec:itroduction}
 
 \subsection{Background and literature review}
+
+Explain about Heart Rate and Sat values. 
+
+Explain about why OAF is used in the hospitals
+
+
 \subsection{Motivation for the research}
+
+
 
 \subsection{Outline of the thesis}
 
