Updates from Overleaf

--- a/lib/chapter1.tex
+++ b/lib/chapter1.tex
@@ -9,6 +9,7 @@ Explain about why OAF is used in the hospitals
 
 \subsection{Motivation for the research}
 
+\subsection{Significance of the Study}
 
 
 \subsection{Outline of the thesis}
