--- a/lib/chapter3.tex
+++ b/lib/chapter3.tex
@@ -1,5 +1,8 @@
 \section{METHODOLOGY}\label{sec:methodology}
 
+In this chapter, we describe the methodology we used to achieve our research objectives. We begin by discussing the research design and data collection methods we employed to gather information on heart rate variability in infants with heart disease. We then outline our approach to data preprocessing, including data cleaning and feature selection. Finally, we describe the machine learning algorithms we used to classify the temporal series data and the performance metrics we used to evaluate the models. Depending on the specifics of your research, you may want to include a section on data collection and preprocessing, as well as any ethical considerations you had to take into account.
+
+
 \subsection{Research design}
 
 We employed a quantitative research design to investigate the heart rate variability in infants with heart disease. Our study involved the analysis of temporal series data collected from electrocardiogram (ECG) recordings of infants with heart disease.
