Explain about, wrong

--- a/lib/chapter1.tex
+++ b/lib/chapter1.tex
@@ -2,9 +2,9 @@
 
 \subsection{Background and literature review}
 
-Explain about Heart Rate and Sat values. 
+Explain Heart Rate and Sat values. 
 
-Explain about why OAF is used in the hospitals
+Explain why OAF is used in the hospitals
 
 
 \subsection{Motivation for the research}
