--- a/biblio.bib
+++ b/biblio.bib
@@ -31,3 +31,14 @@
   pages={7--13},
   year={2003},
 }
+
+@Article{,
+    title = {{mclust} 5: clustering, classification and density estimation using {G}aussian finite mixture models},
+    author = {Luca Scrucca and Michael Fop and T. Brendan Murphy and Adrian E. Raftery},
+    journal = {The {R} Journal},
+    year = {2016},
+    volume = {8},
+    number = {1},
+    pages = {289--317},
+    url = {https://doi.org/10.32614/RJ-2016-021},
+  }
