--- a/biblio.bib
+++ b/biblio.bib
@@ -42,3 +42,14 @@
     pages = {289--317},
     url = {https://doi.org/10.32614/RJ-2016-021},
   }
+
+  @Article{,
+    title = {{NbClust}: An {R} Package for Determining the Relevant Number of Clusters in a Data Set},
+    author = {Malika Charrad and Nadia Ghazzali and V{\'e}ronique Boiteau and Azam Niknafs},
+    journal = {Journal of Statistical Software},
+    year = {2014},
+    volume = {61},
+    number = {6},
+    pages = {1--36},
+    url = {https://www.jstatsoft.org/v61/i06/},
+  }
