--- a/biblio.bib
+++ b/biblio.bib
@@ -1,3 +1,10 @@
+@article{CrespoRegalado2019FactoresDR,
+  title={Factores de riesgo de bronquiolitis en ni{\~n}os menores de un a{\~n}o, hospital Luis Fernando Mart{\'i}nez, Ca{\~n}ar entre enero y julio del 2018},
+  author={V{\'i}ctor Miguel Crespo-Regalado and Adriana Fernanda Ulloa-Castro and Cristian Javier Sanmart{\'i}n-Vergara},
+  journal={Killkana Salud y Bienestar},
+  year={2019}
+}
+
 @book{horowitz2015,
   title={The Art of Electronics},
   author={Horowitz, P. and Hill, W.},
