--- a/lib/chapter1.tex
+++ b/lib/chapter1.tex
@@ -1,5 +1,8 @@
 \section{INTRODUCTION} \label{sec:itroduction}
 
+La bronquiolitis es una infección respiratoria que afecta al tracto respiratorio inferior, es la patología más común en niños menores de 2 años de edad y es la principal causa de ingreso hospitalario.   
+
+This chapter serves as an introduction to the research topic, providing background information, the motivation for the study, and a brief outline of the thesis.
 \subsection{Background and literature review}
 
 Explain Heart Rate and Sat values. 
