--- a/lib/chapter1.tex
+++ b/lib/chapter1.tex
@@ -2,7 +2,9 @@
 
 La bronquiolitis es una infección respiratoria que afecta al tracto respiratorio inferior, es la patología más común en niños menores de 2 años de edad y es la principal causa de ingreso hospitalario.   
 
-This chapter serves as an introduction to the research topic, providing background information, the motivation for the study, and a brief outline of the thesis.
+This chapter serves as an introduction to the research topic, providing background information, the motivation for the study, and a brief outline of the thesis. (\cite{CrespoRegalado2019FactoresDR})
+
+
 \subsection{Background and literature review}
 
 Explain Heart Rate and Sat values. 
