--- a/biblio.bib
+++ b/biblio.bib
@@ -1,5 +1,5 @@
 @article{Daverio2019,
-   abstract = {Aim: We aimed to describe the characteristics and outcomes of infants with bronchiolitis who received high-flow nasal cannula oxygen (HFNC) following a two-tiered approach. Methods: This retrospective study included 211 infants below 12 months of age needing oxygen therapy for bronchiolitis, between 2012 and 2017, on the general paediatric ward of the tertiary Paediatric Hospital of Padova, Italy. HFNC was used as first-line therapy for moderate to severe disease and as rescue therapy for deterioration on low-flow oxygen. Results: Median age was 61 days (IQR 31–126), and 57.3% were males. HFNC was used as first-line therapy in 35/211 (16.6%) infants and as rescue in 73/176 (41.5%) patients on low-flow oxygen. Overall 9/211 patients (4.3%) were admitted to intensive care, representing a HFNC failure of 9/108 (8.3%). Intensive care admissions did not significantly differ between initial low-flow oxygen therapy and HFNC (8/176, 4.5% versus 1/35, 2.8%, proportion difference 1.7%, 95%CI −10.2 to 6.7), or between initial and rescue HFNC (1/35, 2.8% versus 8/73, 10.9%; proportion difference 8.1%, 95%CI −4.5 to 18). Only two patients developed air leak and were treated conservatively. Conclusion: A two-tiered approach to HFNC use in bronchiolitis was associated with low intensive care admissions and no adverse outcomes.},
+   abstract = {Aim: We aimed to describe the characteristics and outcomes of infants with bronchiolitis who received high-flow nasal cannula oxygen (HFNC) following a two-tiered approach. Methods: This retrospective study included 211 infants below 12 months of age needing oxygen therapy for bronchiolitis, between 2012 and 2017, on the general paediatric ward of the tertiary Paediatric Hospital of Padova, Italy. HFNC was used as first-line therapy for moderate to severe disease and as rescue therapy for deterioration on low-flow oxygen. Results: Median age was 61 days (IQR 31–126),},
    author = {Marco Daverio and Liviana Da Dalt and Matteo Panozzo and Anna Chiara Frigo and Silvia Bressan},
    doi = {10.1111/apa.14869},
    issn = {16512227},
@@ -19,7 +19,7 @@
    abstract = {CONCLUSIONS: High FiO2 requirements, history of intubation, and cardiac co-morbidity are associative predictors of HFNC failure. Bronchiolitis patients may be treated with HFNC outside of the ICU with lower odds of failure. Pediatr Pulmonol. 2017;52:806-812. © 2017 Wiley Periodicals, Inc.
 OBJECTIVES: High flow nasal cannula (HFNC) use is increasing in pediatrics. Few studies exist examining the safety of HFNC use outside the intensive care unit (ICU). This study aimed to characterize patient qualities associated with failure of HFNC use outside the ICU.
 STUDY DESIGN: A retrospective chart review of patients placed on HFNC outside the ICU from September 2011 to July 2013 was completed. Failure was defined as intubation or cardiopulmonary arrest. Two-sample tests and binary logistic regression determined significant factors associated with failed HFNC administration, both unadjusted and adjusted for hospital.
-RESULTS: Two hundred thirty-one patients met inclusion criteria, with 192 receiving treatment for a primary respiratory diagnosis (83%). Fourteen (6%) progressed to HFNC failure; 12 transferred to the ICU and were intubated, two with congenital heart disease suffered cardiopulmonary arrest on the floor. Two-sample tests revealed failure patients were more likely to have a cardiac history (P = 0.026), history of intubation (P = 0.040), and require higher fraction of inspired oxygen (FiO2 ) (median 100%; 25th-75th 60-100%; P = <0.001). Hospital adjusted logistic regression further demonstrated failure patients were more likely to be treated with higher FiO2 (OR: 38.3; 95% CI: 4.0-366.3; P = 0.002), and less likely to have a diagnosis of bronchiolitis (OR: 0.3; 95% CI: 0.1-0.9; P = 0.048).},
+RESULTS: Two hundred thirty-one patients met inclusion criteria, with 192 receiving treatment for a primary respiratory diagnosis (83)},
    author = {Kristina A. Betters and Scott E. Gillespie and Judson Miller and David Kotzbauer and Kiran B. Hebbar},
    doi = {10.1002/ppul.23626},
    issn = {10990496},
@@ -44,7 +44,6 @@ RESULTS: Two hundred thirty-one patients met inclusion criteria, with 192 receiv
    title = {High-flow Nasal Cannula: Mechanisms of Action and Adult and Pediatric Indications},
    year = {2018},
 }
-
 
 
 @book{horowitz2015,
