--- a/lib/chapter1.tex
+++ b/lib/chapter1.tex
@@ -1,11 +1,10 @@
 \section{INTRODUCTION} \label{sec:itroduction}
 
-La bronquiolitis es una infección respiratoria que afecta al tracto respiratorio inferior, es la patología más común en niños menores de 2 años de edad y es la principal causa de ingreso hospitalario. EL pilar de tratamiento sigue siendo la atención de apoyo, incluyendo la alimentación, la hidratación y el apoyo respiratorio desde administración estándar de oxígeno a la ventilación invasiva. 
+La bronquiolitis es una infección respiratoria que afecta al tracto respiratorio inferior, es la patología más común en niños menores de 2 años de edad y es la principal causa de ingreso hospitalario en lactantes menores de 1 año de edad . El pilar de tratamiento de bronquiolitis sigue siendo la atención de apoyo, incluyendo la alimentación, la hidratación y el apoyo respiratorio desde administración estándar de oxígeno a la ventilación invasiva. 
 
 La Oxigenación por Cánula Nasal de Alto Flujo, también conocida como "Oxigenación de Alto Flujo" (OAF) es una técnica de soporte respiratorio no invasiva que se ha utilizado en niños con bronquiolitis aguda en unidades de cuidados intensivos (UCI), cuidados neonatales y plantas pediátricas. La OAF es una técnica que proporciona un flujo de gas humidificado y calentado a través de una cánula nasal a una velocidad superior a la ventilación espontánea del paciente. (\cite{Daverio2019}) Esto puede mejorar la eliminación de secreciones, disminuir la inflamación de las vías respiratorias y reducir el gasto energético del paciente. En comparación con el oxígeno estándar, que es frío y seco, la terapia de oxígeno calentado y humidificado puede ser más beneficiosa para los pacientes con insuficiencia respiratoria aguda. 
 
 En el artículo \cite{Lodeserto2018} hace referencia al estudio de 10 pacientes los cuales muestran insuficiencia cardíaca de tipo III y cómo aquellos se benefician de esta terapia. Además también se menciona la ayuda que puede suponer para los pacientes con enfermedad pulmonar obstructiva crónica (EPOC) y falla respiratoria aguda. Sin embargo, es importante tener en cuenta que cada paciente es único y debe ser evaluado individualmente para determinar si la terapia con cánula nasal de alto flujo es adecuada para ellos.
-
 
 En los años recientes se ha incrementado el uso de la OAF el cual fue inicialmente introducido en la práctica clínica pero su uso se limitó a la población neonatal. En los últimos años, la OAF se ha utilizado cada vez más en niños mayores y adultos. La OAF muestra menos probabilidades de fracaso cuando se tratan los pacientes fuera de la UCI. Esto se debe principalmente a que aquellos pacientes que no están en UCI tienen una menor gravedad de la enfermedad y, por lo tanto son menos propensos a requerir una atención más intensiva, también tienen menos factores de riesgo asociados con el fracaso del OAF; como comorbilidades cardíacas y antecedentes de intubación. (\cite{Betters2017}) 
 
