--- a/biblio.bib
+++ b/biblio.bib
@@ -1,3 +1,18 @@
+@generic{Fainardi2021,
+   abstract = {Bronchiolitis (BR), a lower respiratory tract infection mainly caused by respiratory syncytial virus (RSV), can be very severe. Presently, adequate nutritional support and oxygen therapy remain the only interventions recommended to treat patients with BR. For years, mild BR cases were treated with noninvasive standard oxygen therapy (SOT), i.e., with cold and poorly or totally non-humidified oxygen delivered by an ambient headbox or low-flow nasal cannula. Children with severe disease were intubated and treated with invasive mechanical ventilation (IMV). To improve SOT and overcome the disadvantages of IMV, new measures of noninvasive and more efficient oxygen administration have been studied. Bi-level positive air way pressure (BiPAP), continuous positive airway pressure (CPAP), and high-flow nasal cannula (HFNC) are among them. For its simplicity, good tolerability and safety, and the good results reported in clinical studies, HFNC has become increasingly popular and is now widely used. However, consistent guidelines for initiation and discontinuation of HFNC are lacking. In this narrative review, the role of HFNC to treat infants with BR is discussed. An analysis of the literature showed that, despite its widespread use, the role of HFNC in preventing respiratory failure in children with BR is not precisely defined. It is not established whether it can offer greater benefits compared to SOT and when and in which infants it can replace CPAP or BiPAP. The analysis of the results clearly indicates the need for multicenter studies and official guidelines. In the meantime, HFNC can be considered a safe and effective method to treat children with mild to moderate BR who do not respond to SOT.},
+   author = {Valentina Fainardi and Lara Abelli and Maria Muscarà and Giovanna Pisi and Nicola Principi and Susanna Esposito},
+   doi = {10.3390/children8020066},
+   issn = {22279067},
+   issue = {2},
+   journal = {Children},
+   keywords = {BiPAP,Bronchiolitis,CPAP,HFNC,Oxygen therapy},
+   month = {2},
+   publisher = {MDPI AG},
+   title = {Update on the role of high-flow nasal cannula in infants with bronchiolitis},
+   volume = {8},
+   year = {2021},
+}
+
 @article{Daverio2019,
    abstract = {Aim: We aimed to describe the characteristics and outcomes of infants with bronchiolitis who received high-flow nasal cannula oxygen (HFNC) following a two-tiered approach. Methods: This retrospective study included 211 infants below 12 months of age needing oxygen therapy for bronchiolitis, between 2012 and 2017, on the general paediatric ward of the tertiary Paediatric Hospital of Padova, Italy. HFNC was used as first-line therapy for moderate to severe disease and as rescue therapy for deterioration on low-flow oxygen. Results: Median age was 61 days (IQR 31–126),},
    author = {Marco Daverio and Liviana Da Dalt and Matteo Panozzo and Anna Chiara Frigo and Silvia Bressan},
