--- a/lib/chapter1.tex
+++ b/lib/chapter1.tex
@@ -12,8 +12,7 @@ La Oxigenación por Cánula Nasal de Alto Flujo, también conocida como: Oxigena
 
 En los años recientes se ha incrementado el uso de la OAF la cual fue inicialmente introducida en la práctica clínica pero su uso se limitó a la población neonatal. En los últimos años, la OAF se ha utilizado cada vez más en niños mayores y adultos. La OAF muestra menos probabilidades de fracaso cuando se tratan los pacientes fuera de la UCI. Esto se debe principalmente a que aquellos pacientes que no están en UCI tienen una menor gravedad de la enfermedad y, por lo tanto son menos propensos a requerir una atención más intensiva, también tienen menos factores de riesgo asociados con el fracaso del OAF; como comorbilidades cardíacas y antecedentes de intubación. (\cite{Betters2017}) 
 
-En cuanto a los pacientes beneficiados por el uso de la OAF, en el artículo (\cite{Lodeserto2018}) hace referencia al estudio de 10 pacientes los cuales muestran insuficiencia cardíaca de tipo III y cómo aquellos se benefician de esta terapia. Además también se menciona la ayuda que puede suponer para los pacientes con Enfermedad Pulmonar Obstructiva Crónica (EPOC) y falla respiratoria aguda. Sin embargo, es importante tener en cuenta que cada paciente es único y debe ser evaluado individualmente para determinar si la terapia con cánula nasal de alto flujo es adecuada para ellos.
-
+En cuanto a los pacientes beneficiados por el uso de la OAF, en el artículo (\cite{Lodeserto2018}) se hace referencia al estudio de 10 pacientes los cuales muestran insuficiencia cardíaca de tipo III y cómo aquellos se benefician de esta terapia. Además también se menciona la ayuda que puede suponer para los pacientes con Enfermedad Pulmonar Obstructiva Crónica (EPOC) y falla respiratoria aguda. Sin embargo, es importante tener en cuenta que cada paciente es único y debe ser evaluado individualmente para determinar si la terapia con cánula nasal de alto flujo es adecuada para ellos.
 
 
 \subsection{Motivation for the research}
