--- a/lib/chapter1.tex
+++ b/lib/chapter1.tex
@@ -1,19 +1,22 @@
 \section{INTRODUCTION} \label{sec:itroduction}
 
 La bronquiolitis (BR), una infección de las vías respiratorias inferiores causada principalmente por el virus respiratorio sincitial (VRS) y puede convertirse en una enfermedad muy grave. En algunos casos es necesaria la la hospitalización
-10 \% de los casos, y hasta el 23,8 \% de estos pacientes necesitan cuidados críticos por insuficiencia respiratoria o episodios de apnea. Aunque la BR puede diagnosticarse en adultos y ancianos, son los lactantes, sobre todo los más pequeños, los sujetos más afectados por la enfermedad.(\cite{Fainardi2021}) 
+10 \% de los casos, y hasta el 23,8 \% de estos pacientes necesitan cuidados críticos por insuficiencia respiratoria o episodios de apnea. Aunque la BR puede diagnosticarse en adultos y ancianos, son los lactantes, sobre todo los más pequeños, los sujetos más afectados por la enfermedad.(\cite{Fainardi2021}) La dificultad respiratoria que caracteriza y condiciona la gravedad del cuadro, alcanza su máxima expresividad transcurridos los primeros 3-5 días de evolución de la enfermedad, y es la causa principal de ingreso hospitalario. (\cite{Patel2003})
 
-La bronquiolitis afecta principalmente al tracto respiratorio inferior y es la patología más común en niños menores de 2 años de edad siendo la principal causa de ingreso hospitalario en lactantes menores de 1 año de edad . El pilar de tratamiento de bronquiolitis a día de hoy sse basa en la atención de apoyo, incluyendo la alimentación, la hidratación y el apoyo respiratorio desde administración estándar de oxígeno a la ventilación invasiva. (\cite{Daverio2019})
+La bronquiolitis afecta principalmente al tracto respiratorio inferior y es la patología más común en niños menores de 2 años de edad siendo la principal causa de ingreso hospitalario en lactantes menores de 1 año de edad . El pilar de tratamiento de bronquiolitis a día de hoy se basa en la atención de apoyo, incluyendo la alimentación, la hidratación y el apoyo respiratorio desde administración estándar de oxígeno a la ventilación invasiva. (\cite{Daverio2019})
 
 La Oxigenación por Cánula Nasal de Alto Flujo, también conocida como: Oxigenación de Alto Flujo (OAF). Es una técnica de soporte respiratorio no invasiva que se ha utilizado en niños con bronquiolitis aguda en unidades de cuidados intensivos (UCI), cuidados neonatales y plantas pediátricas. La OAF es una técnica que proporciona un flujo de gas humidificado y calentado a través de una cánula nasal a una velocidad superior a la ventilación espontánea del paciente. Esto puede mejorar la eliminación de secreciones, disminuir la inflamación de las vías respiratorias y reducir el gasto energético del paciente. En comparación con el oxígeno estándar, que es frío y seco, la terapia de oxígeno calentado y humidificado puede ser más beneficiosa para los pacientes con insuficiencia respiratoria aguda. (\cite{Daverio2019})
 
 
 \subsection{Background and literature review}
 
-En los años recientes se ha incrementado el uso de la OAF la cual fue inicialmente introducida en la práctica clínica pero su uso se limitó a la población neonatal. En los últimos años, la OAF se ha utilizado cada vez más en niños mayores y adultos. La OAF muestra menos probabilidades de fracaso cuando se tratan los pacientes fuera de la UCI. Esto se debe principalmente a que aquellos pacientes que no están en UCI tienen una menor gravedad de la enfermedad y, por lo tanto son menos propensos a requerir una atención más intensiva, también tienen menos factores de riesgo asociados con el fracaso del OAF; como comorbilidades cardíacas y antecedentes de intubación. (\cite{Betters2017}) 
+En los años recientes se ha incrementado el uso de la OAF esta fue inicialmente introducida en la práctica clínica pero su uso se limitó a la población neonatal. En los últimos años, la OAF se ha utilizado cada vez más en niños mayores y adultos. La OAF muestra menos probabilidades de fracaso cuando se tratan los pacientes fuera de la UCI. Esto se debe principalmente a que aquellos pacientes que no están en UCI tienen una menor gravedad de la enfermedad y, por lo tanto son menos propensos a requerir una atención más intensiva, también tienen menos factores de riesgo asociados con el fracaso del OAF; como comorbilidades cardíacas y antecedentes de intubación. (\cite{Betters2017}) 
 
-En cuanto a los pacientes beneficiados por el uso de la OAF, en el artículo (\cite{Lodeserto2018}) se hace referencia al estudio de 10 pacientes los cuales muestran insuficiencia cardíaca de tipo III y cómo aquellos se benefician de esta terapia. Además también se menciona la ayuda que puede suponer para los pacientes con Enfermedad Pulmonar Obstructiva Crónica (EPOC) y falla respiratoria aguda. Sin embargo, es importante tener en cuenta que cada paciente es único y debe ser evaluado individualmente para determinar si la terapia con cánula nasal de alto flujo es adecuada para ellos.
+En cuanto a los pacientes beneficiados por el uso de la OAF, en el artículo (\cite{Lodeserto2018}) hace referencia al estudio de 10 pacientes los cuales muestran insuficiencia cardíaca de tipo III y cómo aquellos se benefician de esta terapia. Además también se menciona la ayuda que puede suponer para los pacientes con Enfermedad Pulmonar Obstructiva Crónica (EPOC) y falla respiratoria aguda. Sin embargo, es importante tener en cuenta que cada paciente es único y debe ser evaluado individualmente para determinar si la terapia con cánula nasal de alto flujo es adecuada para ellos.
 
+Actualmente en los servicios de pediatría de los hospitales no se dispone de marcadores clínicos, biológicos o inmunológicos precoces que permitan prever la evolución de los pacientes ingresados por bronquiolitis. Tan solo se cuenta con los datos de la exploración física y de las escalas validadas, parcialmente objetivas, para determinar su gravedad en el momento del ingreso, pero no se permite prever su evolución. Estos mismos datos son en los que se apoya el equipo sanitario para decidir si al paciente se la suministra OAF o se le lleva a la UCI pediátrica dónde se realizan otras técnicas para estabilizar el cuadro grave de bronquiolitis. Esta información ha sido obtenida a raíz de mantener conversaciones con el servicio de pediatría del Hospital Universitario Gregorio Marañón. 
+
+Por otro lado existen pocos estudios publicados sobre la utilidad y eficacia de los sistemas de telemetría continua fuera de las unidades de cuidados intensivos; aunque se ha demostrado en el ámbito de cuidados intermedios de neonatología su utilidad para prever el ingreso de los pacientes en cuidados intensivos neonatales. (\cite{Solis2022})
 
 \subsection{Motivation for the research}
 
