--- a/biblio.bib
+++ b/biblio.bib
@@ -13,6 +13,24 @@
    year = {2021},
 }
 
+@article{Patel2003,
+   abstract = {Objective: To determine whether oral albuterol is effective in reducing symptomatology of acute viral bronchiolitis in infants with mild-to-moderate illness. Study design: In a randomized, double-blind trial, previously well infants were randomized upon discharge from the emergency department to receive either albuterol (0.1 mg/kg/dose) three times per day or placebo three times per day for 7 days. Daily standardized telephone interviews were conducted for as long as 14 days. The primary outcome was the time to resolution of illness. Secondary outcomes included time to normal feeding, normal sleeping, quiet breathing, resolved cough, and coryza. Results: We studied 129 infants (albuterol, n = 64; placebo, n = 65). Baseline characteristics were similar between groups. The overall mean age was 5.3 months, 60% were male, and 49 of 61 tested infants were positive for respiratory syncytial virus. The median (95% confidence interval) time to resolution of illness (days) was similar: albuterol, 9.0 (8-13); placebo, 8.0 (7-9); P = .3) (log-rank test). There were no significant group differences in any secondary outcome. Health care revisit and admission rates were similar between groups. Conclusions: No significant group differences in either primary or secondary outcomes in infants treated with oral albuterol versus placebo were found. The widespread use of oral albuterol in this patient group is not recommended.},
+   author = {Hema Patel and Serge Gouin and Robert W. Platt},
+   doi = {10.1067/MPD.2003.196},
+   issn = {0022-3476},
+   issue = {5},
+   journal = {The Journal of pediatrics},
+   keywords = {Acute Disease,Administration,Albuterol / administration & dosage,Albuterol / therapeutic use*,Anti-Inflammatory Agents / administration & dosage,Anti-Inflammatory Agents / therapeutic use*,Bronchiolitis,Clinical Trial,Double-Blind Method,Drug Administration Schedule,Female,Hema Patel,Humans,Infant,MEDLINE,Male,NCBI,NIH,NLM,National Center for Biotechnology Information,National Institutes of Health,National Library of Medicine,Non-U.S. Gov't,Oral,PubMed Abstract,Randomized Controlled Trial,Research Support,Robert W Platt,Serge Gouin,Severity of Illness Index,Steroids,Time Factors,Viral / drug therapy*,doi:10.1067/mpd.2003.196,pmid:12756382},
+   month = {5},
+   pages = {509-514},
+   pmid = {12756382},
+   publisher = {J Pediatr},
+   title = {Randomized, double-blind, placebo-controlled trial of oral albuterol in infants with mild-to-moderate acute viral bronchiolitis},
+   volume = {142},
+   url = {https://pubmed.ncbi.nlm.nih.gov/12756382/},
+   year = {2003},
+}
+
 @article{Daverio2019,
    abstract = {Aim: We aimed to describe the characteristics and outcomes of infants with bronchiolitis who received high-flow nasal cannula oxygen (HFNC) following a two-tiered approach. Methods: This retrospective study included 211 infants below 12 months of age needing oxygen therapy for bronchiolitis, between 2012 and 2017, on the general paediatric ward of the tertiary Paediatric Hospital of Padova, Italy. HFNC was used as first-line therapy for moderate to severe disease and as rescue therapy for deterioration on low-flow oxygen. Results: Median age was 61 days (IQR 31–126),},
    author = {Marco Daverio and Liviana Da Dalt and Matteo Panozzo and Anna Chiara Frigo and Silvia Bressan},
@@ -29,6 +47,24 @@
    volume = {108},
    year = {2019},
 }
+
+@article{Solis2022,
+   abstract = {Objective Analysis of longitudinal data can provide neonatologists with tools that can help predict clinical deterioration and improve outcomes. The aim of this study is to analyze continuous monitoring data in newborns, using vital signs to develop predictive models for intensive care admission and time to discharge. Study Design We conducted a retrospective cohort study, including term and preterm newborns with respiratory distress patients admitted to the neonatal ward. Clinical and epidemiological data, as well as mean heart rate and saturation, at every minute for the first 12 hours of admission were collected. Multivariate mixed, survival and joint models were developed. Results A total of 56,377 heart rate and 56,412 oxygen saturation data were analyzed from 80 admitted patients. Of them, 73 were discharged home and 7 required transfer to the intensive care unit (ICU). Longitudinal evolution of heart rate (p < 0.01) and oxygen saturation (p = 0.01) were associated with time to discharge, as well as birth weight (p < 0.01) and type of delivery (p < 0.01). Longitudinal heart rate evolution (p < 0.01) and fraction of inspired oxygen at admission at the ward (p < 0.01) predicted neonatal ICU (NICU) admission. Conclusion Longitudinal evolution of heart rate can help predict time to transfer to intensive care, and both heart rate and oxygen saturation can help predict time to discharge. Analysis of continuous monitoring data in patients admitted to neonatal wards provides useful tools to stratify risks and helps in taking medical decisions. Key Points Continuous monitoring of vital signs can help predict and prevent clinical deterioration in neonatal patients. In our study, longitudinal analysis of heart rate and oxygen saturation predicted time to discharge and intensive care admission. More studies are needed to prospectively prove that these models can helpmake clinical decisions and stratify patients' risks.},
+   author = {Gonzalo Solís-García and Elena Maderuelo-Rodríguez and Teresa Perez-Pérez and Laura Torres-Soblechero and Ana Gutiérrez-Vélez and Cristina Ramos-Navarro and Raúl López-Martínez and Manuel Sánchez-Luna},
+   doi = {10.1055/s-0040-1718877},
+   issn = {10988785},
+   issue = {6},
+   journal = {American Journal of Perinatology},
+   keywords = {big data,joint models,longitudinal analysis,respiratory distress},
+   month = {4},
+   pages = {677-682},
+   pmid = {33075845},
+   publisher = {Thieme Medical Publishers, Inc.},
+   title = {Longitudinal Analysis of Continuous Pulse Oximetry as Prognostic Factor in Neonatal Respiratory Distress},
+   volume = {39},
+   year = {2022},
+}
+
 
 @article{Betters2017,
    abstract = {CONCLUSIONS: High FiO2 requirements, history of intubation, and cardiac co-morbidity are associative predictors of HFNC failure. Bronchiolitis patients may be treated with HFNC outside of the ICU with lower odds of failure. Pediatr Pulmonol. 2017;52:806-812. © 2017 Wiley Periodicals, Inc.
